src/main/java/com/gen/CreateTableParser.java
// Generated from D:/Users/Administrator/IdeaProjects/parser/src/main/resources\CreateTable.g4 by ANTLR 4.9.2
package com.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CreateTableParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, KEYWORD_NOT=2, KEYWORD_NULL=3, KEYWORD_CREATE=4, KEYWORD_TABLE=5, 
		KEYWORD_COMMENT=6, KEYWORD_USE=7, KEYWORD_DEFAULT=8, KEYWORD_ON=9, KEYWORD_UPDATE=10, 
		KEYWORD_CURRENT_TIMESTAMP=11, KEYWORD_UNSIGNED=12, KEYWORD_PRIMARY=13, 
		KEYWORD_KEY=14, KEYWORD_UNIQUE=15, KEYWORD_ENGINE=16, KEYWORD_CHARSET=17, 
		KEYWORD_AUTO_INCREMENT=18, TYPE_TIMESTAMP=19, TYPE_BIT=20, TYPE_CHAR=21, 
		TYPE_INT=22, TYPE_VARCHAR=23, TYPE_TINYINT=24, TYPE_SMALLINT=25, TYPE_MEDIUMINT=26, 
		TYPE_BIGINT=27, TYPE_DECIMAL=28, LEFT_BRACE=29, RIGHT_BRACE=30, LEFT_BREAK=31, 
		RIGHT_BREAK=32, COMMA=33, EQUAL=34, DIGITS=35, IDENTIFIER=36, BACKQUOTED_IDENTIFIER=37, 
		TEXT_LITERAL=38, SEMICOLON=39, WS=40, KEYWORD_INDEX=41;
	public static final int
		RULE_statements = 0, RULE_statement = 1, RULE_use_db_statement = 2, RULE_create_table_statement = 3, 
		RULE_create_table_items = 4, RULE_create_table_item = 5, RULE_field_definition = 6, 
		RULE_primary_definition = 7, RULE_unique_definition = 8, RULE_index_definition = 9, 
		RULE_not_null_attribute = 10, RULE_auto_increment_attribute = 11, RULE_default_attribute = 12, 
		RULE_onupdate_attribute = 13, RULE_comment_attribute = 14, RULE_field_attributes = 15, 
		RULE_table_default_charset = 16, RULE_table_engine = 17, RULE_table_comment = 18, 
		RULE_table_attribute = 19, RULE_table_attributes = 20, RULE_integer_number_type = 21, 
		RULE_decimal_number_type = 22, RULE_text_type = 23, RULE_bit_type = 24, 
		RULE_timestamp_type = 25, RULE_type = 26, RULE_value = 27, RULE_literal = 28, 
		RULE_identifier = 29, RULE_identifiers = 30, RULE_comment_part = 31, RULE_single_length_part = 32, 
		RULE_double_length_part = 33, RULE_current_timestamp_part = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"statements", "statement", "use_db_statement", "create_table_statement", 
			"create_table_items", "create_table_item", "field_definition", "primary_definition", 
			"unique_definition", "index_definition", "not_null_attribute", "auto_increment_attribute", 
			"default_attribute", "onupdate_attribute", "comment_attribute", "field_attributes", 
			"table_default_charset", "table_engine", "table_comment", "table_attribute", 
			"table_attributes", "integer_number_type", "decimal_number_type", "text_type", 
			"bit_type", "timestamp_type", "type", "value", "literal", "identifier", 
			"identifiers", "comment_part", "single_length_part", "double_length_part", 
			"current_timestamp_part"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'b'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'{'", "'}'", "'('", "')'", "','", "'='", 
			null, null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "KEYWORD_NOT", "KEYWORD_NULL", "KEYWORD_CREATE", "KEYWORD_TABLE", 
			"KEYWORD_COMMENT", "KEYWORD_USE", "KEYWORD_DEFAULT", "KEYWORD_ON", "KEYWORD_UPDATE", 
			"KEYWORD_CURRENT_TIMESTAMP", "KEYWORD_UNSIGNED", "KEYWORD_PRIMARY", "KEYWORD_KEY", 
			"KEYWORD_UNIQUE", "KEYWORD_ENGINE", "KEYWORD_CHARSET", "KEYWORD_AUTO_INCREMENT", 
			"TYPE_TIMESTAMP", "TYPE_BIT", "TYPE_CHAR", "TYPE_INT", "TYPE_VARCHAR", 
			"TYPE_TINYINT", "TYPE_SMALLINT", "TYPE_MEDIUMINT", "TYPE_BIGINT", "TYPE_DECIMAL", 
			"LEFT_BRACE", "RIGHT_BRACE", "LEFT_BREAK", "RIGHT_BREAK", "COMMA", "EQUAL", 
			"DIGITS", "IDENTIFIER", "BACKQUOTED_IDENTIFIER", "TEXT_LITERAL", "SEMICOLON", 
			"WS", "KEYWORD_INDEX"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CreateTable.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CreateTableParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				statement();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KEYWORD_CREATE || _la==KEYWORD_USE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Use_db_statementContext use_db_statement() {
			return getRuleContext(Use_db_statementContext.class,0);
		}
		public Create_table_statementContext create_table_statement() {
			return getRuleContext(Create_table_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYWORD_USE:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				use_db_statement();
				}
				break;
			case KEYWORD_CREATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				create_table_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Use_db_statementContext extends ParserRuleContext {
		public TerminalNode KEYWORD_USE() { return getToken(CreateTableParser.KEYWORD_USE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(CreateTableParser.SEMICOLON, 0); }
		public Use_db_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_db_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterUse_db_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitUse_db_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitUse_db_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Use_db_statementContext use_db_statement() throws RecognitionException {
		Use_db_statementContext _localctx = new Use_db_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_use_db_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(KEYWORD_USE);
			setState(80);
			identifier();
			setState(81);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_table_statementContext extends ParserRuleContext {
		public TerminalNode KEYWORD_CREATE() { return getToken(CreateTableParser.KEYWORD_CREATE, 0); }
		public TerminalNode KEYWORD_TABLE() { return getToken(CreateTableParser.KEYWORD_TABLE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LEFT_BREAK() { return getToken(CreateTableParser.LEFT_BREAK, 0); }
		public Create_table_itemsContext create_table_items() {
			return getRuleContext(Create_table_itemsContext.class,0);
		}
		public TerminalNode RIGHT_BREAK() { return getToken(CreateTableParser.RIGHT_BREAK, 0); }
		public Table_attributesContext table_attributes() {
			return getRuleContext(Table_attributesContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(CreateTableParser.SEMICOLON, 0); }
		public Create_table_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_table_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterCreate_table_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitCreate_table_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitCreate_table_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_table_statementContext create_table_statement() throws RecognitionException {
		Create_table_statementContext _localctx = new Create_table_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_create_table_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(KEYWORD_CREATE);
			setState(84);
			match(KEYWORD_TABLE);
			setState(85);
			identifier();
			setState(86);
			match(LEFT_BREAK);
			setState(87);
			create_table_items();
			setState(88);
			match(RIGHT_BREAK);
			setState(89);
			table_attributes();
			setState(90);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_table_itemsContext extends ParserRuleContext {
		public List<Create_table_itemContext> create_table_item() {
			return getRuleContexts(Create_table_itemContext.class);
		}
		public Create_table_itemContext create_table_item(int i) {
			return getRuleContext(Create_table_itemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CreateTableParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CreateTableParser.COMMA, i);
		}
		public Create_table_itemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_table_items; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterCreate_table_items(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitCreate_table_items(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitCreate_table_items(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_table_itemsContext create_table_items() throws RecognitionException {
		Create_table_itemsContext _localctx = new Create_table_itemsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_create_table_items);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			create_table_item();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(93);
				match(COMMA);
				setState(94);
				create_table_item();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_table_itemContext extends ParserRuleContext {
		public Field_definitionContext field_definition() {
			return getRuleContext(Field_definitionContext.class,0);
		}
		public Primary_definitionContext primary_definition() {
			return getRuleContext(Primary_definitionContext.class,0);
		}
		public Unique_definitionContext unique_definition() {
			return getRuleContext(Unique_definitionContext.class,0);
		}
		public Index_definitionContext index_definition() {
			return getRuleContext(Index_definitionContext.class,0);
		}
		public Create_table_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_table_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterCreate_table_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitCreate_table_item(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitCreate_table_item(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_table_itemContext create_table_item() throws RecognitionException {
		Create_table_itemContext _localctx = new Create_table_itemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_create_table_item);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
			case BACKQUOTED_IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				field_definition();
				}
				break;
			case KEYWORD_PRIMARY:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				primary_definition();
				}
				break;
			case KEYWORD_UNIQUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				unique_definition();
				}
				break;
			case KEYWORD_KEY:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				index_definition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_definitionContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Field_attributesContext field_attributes() {
			return getRuleContext(Field_attributesContext.class,0);
		}
		public Field_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterField_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitField_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitField_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Field_definitionContext field_definition() throws RecognitionException {
		Field_definitionContext _localctx = new Field_definitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_field_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			identifier();
			setState(107);
			type();
			setState(108);
			field_attributes();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primary_definitionContext extends ParserRuleContext {
		public TerminalNode KEYWORD_PRIMARY() { return getToken(CreateTableParser.KEYWORD_PRIMARY, 0); }
		public TerminalNode KEYWORD_KEY() { return getToken(CreateTableParser.KEYWORD_KEY, 0); }
		public TerminalNode LEFT_BREAK() { return getToken(CreateTableParser.LEFT_BREAK, 0); }
		public IdentifiersContext identifiers() {
			return getRuleContext(IdentifiersContext.class,0);
		}
		public TerminalNode RIGHT_BREAK() { return getToken(CreateTableParser.RIGHT_BREAK, 0); }
		public Primary_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterPrimary_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitPrimary_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitPrimary_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primary_definitionContext primary_definition() throws RecognitionException {
		Primary_definitionContext _localctx = new Primary_definitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_primary_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(KEYWORD_PRIMARY);
			setState(111);
			match(KEYWORD_KEY);
			setState(112);
			match(LEFT_BREAK);
			setState(113);
			identifiers();
			setState(114);
			match(RIGHT_BREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unique_definitionContext extends ParserRuleContext {
		public TerminalNode KEYWORD_UNIQUE() { return getToken(CreateTableParser.KEYWORD_UNIQUE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LEFT_BREAK() { return getToken(CreateTableParser.LEFT_BREAK, 0); }
		public IdentifiersContext identifiers() {
			return getRuleContext(IdentifiersContext.class,0);
		}
		public TerminalNode RIGHT_BREAK() { return getToken(CreateTableParser.RIGHT_BREAK, 0); }
		public TerminalNode KEYWORD_INDEX() { return getToken(CreateTableParser.KEYWORD_INDEX, 0); }
		public TerminalNode KEYWORD_KEY() { return getToken(CreateTableParser.KEYWORD_KEY, 0); }
		public Unique_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unique_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterUnique_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitUnique_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitUnique_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Unique_definitionContext unique_definition() throws RecognitionException {
		Unique_definitionContext _localctx = new Unique_definitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unique_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(KEYWORD_UNIQUE);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEYWORD_KEY || _la==KEYWORD_INDEX) {
				{
				setState(117);
				_la = _input.LA(1);
				if ( !(_la==KEYWORD_KEY || _la==KEYWORD_INDEX) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(120);
			identifier();
			setState(121);
			match(LEFT_BREAK);
			setState(122);
			identifiers();
			setState(123);
			match(RIGHT_BREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Index_definitionContext extends ParserRuleContext {
		public TerminalNode KEYWORD_KEY() { return getToken(CreateTableParser.KEYWORD_KEY, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LEFT_BREAK() { return getToken(CreateTableParser.LEFT_BREAK, 0); }
		public IdentifiersContext identifiers() {
			return getRuleContext(IdentifiersContext.class,0);
		}
		public TerminalNode RIGHT_BREAK() { return getToken(CreateTableParser.RIGHT_BREAK, 0); }
		public Index_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterIndex_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitIndex_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CreateTableVisitor ) return ((CreateTableVisitor<? extends T>)visitor).visitIndex_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Index_definitionContext index_definition() throws RecognitionException {
		Index_definitionContext _localctx = new Index_definitionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_index_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(KEYWORD_KEY);
			setState(126);
			identifier();
			setState(127);
			match(LEFT_BREAK);
			setState(128);
			identifiers();
			setState(129);
			match(RIGHT_BREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
